# CrewMateA350

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  USER_MANUAL.md  eslint.config.js  index.html  package-lock.json  package.json  tmpclaude-f231-cwd  vite.config.ts
.github/: Contributing.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml
CopilotSpeech/: CopilotSpeech.csproj  Program.cs
CopilotSpeech/Grammar/: CommandGrammar.cs  DigitGrammar.cs
CopilotSpeechNew/: CommandDispatcher.cs  CopilotSpeech.csproj  Program.cs  grammar.xml
Manual/: USER_MANUAL.md
Scripts/: .env  FOvoices.ps1  GEvoices.ps1  build-sidecar.ps1  build-speechtrainer.ps1  v_bumper.py  voices.ps1  windowstts.ps1
SpeechTrainer/: .gitignore  MainForm.cs  Program-trainer.cs  SpeechTrainer.csproj  training_phrases.txt
src/: App.tsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/Trainer/: training_phrases.txt
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_data.rs  lib.rs  main.rs  windows.rs
src-tauri/src/audio/: audio_commands.rs  audio_devices.rs  audio_player.rs  mod.rs
src-tauri/src/brigdes/: mod.rs  speech_bridge.rs
src-tauri/src/mobiflight/: mobiflight.rs  mobiflight_commands.rs  mod.rs  telemetry.rs
src-tauri/src/simconnect/: aircraft_title.rs  flight_state.rs  mod.rs  simvars.rs
src-tauri/src/vosk_models/: mod.rs  vosk_commands.rs
src/API/: mobiflightApi.ts
src/components/: FlowPanel.tsx  (+9 more)
(+118 files in other folders)
