[package]
name = "crewmatea350"
version = "0.1.9"
description = "crewmatea350 app"
authors = ["Márcio Araújo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crewmatea350_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
msfs = { git = "https://github.com/flybywiresim/msfs-rs" }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tauri-plugin-shell = "2"
rodio = { version = "0.19", default-features = true }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-prevent-default = "3"
cpal = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
